static/css/main.css
@import url('pico-bootstrap-grid.min.css');

/* Base */

:root {
  --line-height: 1.15;
  --font-size: 16px;
}

.container-fluid {
  --block-spacing-vertical: 1rem;
}

.align-items-baseline {
  align-items: baseline;
}

.align-items-center {
  align-items: center;
}

.justify-content-center {
  justify-content: center;
}

.main-title {
  margin-bottom: calc(var(--typography-spacing-vertical) / 2);
}

footer {
  margin-bottom: calc(var(--block-spacing-vertical) * 1);
  margin-top: calc(var(--block-spacing-vertical) * 1);
}

@media all and (min-width: 1200px) {
  .desktop-only {
    display: block;
  }

  .phone-only {
    display: none;
  }
}

@media all and (max-width: 1199px) {
  .desktop-only {
    display: none;
  }

  .phone-only {
    display: block;
  }
}

/* Nav */

.nav-search {
  margin-bottom: 0;
}

/* Posts */

.post-title {
  display: inline-flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.posts-list-pagination-button {
  margin-left: var(--spacing);
  margin-right: var(--spacing);
}

.post-sorting-button {
  width: 10rem;
}

.post-infos {
  line-height: calc(var(--line-height) * 1.30);
}

.post-flair {
  border: var(--border-width) solid var(--border-color);
  border-radius: var(--border-radius);
  padding-left: calc(var(--spacing) / 4);
  padding-right: calc(var(--spacing) / 4);
  padding-top: calc(var(--spacing) / 6);
  padding-bottom: calc(var(--spacing) / 6);
  margin: calc(var(--spacing) / 4);
  display: inline-flex;
  align-items: center;
  width: fit-content;
}

.post-flair-spoiler {
  background-color: darkred;
}

.post-flair-text {
  mix-blend-mode: difference;
}

.post-flair-icon {
  width: var(--spacing);
  height: var(--spacing);
  margin-left: calc(var(--spacing) / 4);
  margin-right: calc(var(--spacing) / 4);
}

.post-image-thumbnail {
  object-fit: contain;
  max-width: calc(var(--spacing) * 4);
  max-height: calc(var(--spacing) * 4);
}

html[data-theme='dark'] .post-image-thumbnail-default {
  filter: invert(100%);
}

.post-preview-button {
  height: calc(var(--spacing) * 1.5);
  width: calc(var(--spacing) * 1.5);
  padding: 0px;
  line-height: var(--line-height);
}

.post-content {
  height: 100%;
  max-height: 100%;
  max-width: 100%;
  margin-bottom: var(--block-spacing-vertical);
  margin-top: var(--block-spacing-vertical);
}

.post-content-image {
  max-height: 35rem;
  object-position: left;
  object-fit: contain;
}

.post-content-video {
  width: 80vw;
  height: fit-content;
  max-height: 100%;
  max-width: 60vh;
}

.post-comment-title {
  display: inline-flex;
  align-items: baseline;
  flex-wrap: wrap;
  width: 100%;
  margin-bottom: calc(var(--spacing) / 4);
}

.post-comment-title-separator {
  margin-top: 0;
  border-style: dotted;
}

.post-comment-title-item {
  margin-left: calc(var(--spacing) / 4);
  margin-right: calc(var(--spacing) / 4);
}

.post-comment-list-item {
  list-style-type: none;
}

/* Settings */

.settings-item {
  justify-content: left !important;
}

/* Over 18 page */
.over18-button {
  height: fit-content;
  margin-bottom: 0;
  width: 25rem;
  margin-top: var(--spacing);
  border: 0;
  max-width: 100%;
}

.over18-buttons {
  width: fit-content;
  margin: 0 auto;
  max-width: 100%;
}

